/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

message EventBaserateUploaded {
    string effectiveAt = 1 [json_name = "effective_at"];
    string simType=2 [json_name = "sim_type"];
    string country=3;
    string provider = 4;
}