syntax = "proto3";
option go_package = "pb/";
package ukama.rates.v1;

import "google/protobuf/timestamp.proto";

service BaseRatesService {
    rpc GetBaseRates (GetBaseRatesRequest) returns (GetBaseRatesResponse) {}
    rpc GetBaseRate(GetBaseRateRequest) returns (GetBaseRateResponse){}
    rpc UploadBaseRates(UploadBaseRatesRequest) returns (UploadBaseRatesResponse){}
}
message GetBaseRatesRequest{
    string country = 1;
    optional string provider =2;
    optional int32 to  =3;
    optional  int32 from  =4;
    optional SimType sim_type=5;
}
message GetBaseRatesResponse {
    repeated Rate rates = 1;
}
message GetBaseRateResponse{
    Rate rate =1;
    int64 status = 2;
    string error = 3;
}
message GetBaseRateRequest{
    int64 rateId =1;
}
message UploadBaseRatesRequest {
    string fileURL = 1;
    string effectiveAt = 2;
    SimType simType = 3;
}
message UploadBaseRatesResponse {
    repeated Rate rate = 1;
    int64 status = 2;
    string error = 3;
}
message Rate{
    // int32 id =1;
    string country=2;
    string network = 3;
    string vpmn =4;
    string imsi=5;
    string sms_mo=6;
    string sms_mt =7;
    string data =8;
    string  _2g=9;
    string _3g=10;
    string _5g=11;
    string lte=12; 
    string lte_m=13;
    string apn=14; 
    // google.protobuf.Timestamp created_at=15;
    // google.protobuf.Timestamp deleted_at=16;
    // google.protobuf.Timestamp updated_at=17;
    google.protobuf.Timestamp effective_at=15;
    google.protobuf.Timestamp end_at=16;
    string sim_type=17;
}

enum SimType {
    INTER_NONE=0;
    INTER_MNO_DATA=1;
    INTER_MNO_ALL=2;
    INTER_UKAMA_ALL=3;
}
